--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "async": "^1.4.2",
     "jsdom": "^6.5.1",
     "minimist": "^1.2.0",
+    "mkdirp": "^0.5.1",
     "prompt": "^0.2.14",
     "ramda": "^0.17.1",
     "wrench": "^1.5.8"
